[package]
name = "archive-rs"
version = "0.0.2"
authors = ["Christian Krause <christian.krause@mailbox.org>"]
description = "archive file library"
license = "MIT OR Apache-2.0"
readme = "README.md"
documentation = "https://github.com/archive-rs/archive-rs#readme"
homepage = "https://github.com/archive-rs/archive-rs"
repository = "https://docs.rs/archive-rs"
categories = ["compression", "encoding", "filesystem"]
keywords = ["archive"]
edition = "2021"

[dependencies]
path-utils = "0.1"
thiserror = "1"

[dev-dependencies]
anyhow = "1"
bytesize = "1"
clap = "4"

[dependencies.clap]
version = "4"
optional = true

[dependencies.bzip2]
version = "0.5"
optional = true

[dependencies.bzip2-rs]
version = "0.1"
optional = true

[dependencies.flate2]
version = "1"
optional = true

[dependencies.lz4]
version = "1"
optional = true

[dependencies.tar]
version = "0.4"
optional = true

[dependencies.xz2]
version = "0.1"
optional = true

[dependencies.zstd]
version = "0.13"
optional = true

[features]
default = ["bzip2", "flate2", "lz4", "tar", "xz2", "zstd"]

[[example]]
name = "archive-ls"
required-features = ["clap"]
